--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node start server",
-    "server": "nodemon server.js",
+    "server": "nodemon server.js admiServer.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \" npm run server \" \"npm run client \" "
   },
   "author": "Kojo Champ",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
